tests/errors/Channel.send_expects.b
fn bad_send() {
    ch := Channel<int>();
    ch.send("hello");
}

fn main() {
}
